[metadata]
name = gnomonicus
version = 3.0.0
author = Philip W Fowler, Jeremy Westhead
author_email = philip.fowler@ndm.ox.ac.uk
description = Python code to integrate results of tb-pipeline and provide an antibiogram, mutations and variants
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oxfordmmm/gnomonicus
keywords = gnomonicus, piezo, lodestone, clockwork, TB
license = University of Oxford License, see LICENSE
classifiers = Programming Language :: Python :: 3

[options]
package_dir = 
packages = find:
python_requires = >=3.10
install_requires = 
    gumpy>=1.3.4
    bio-grumpy>=0.1.8
    piezo>=0.8.3
    vcf_subset>=1.1.2
    numpy
    pandas
    recursive_diff
zip_safe = False
include_package_data = True
scripts = bin/gnomonicus, bin/gnomonicus-table-update, bin/merge-vcfs

[options.package_data]
mypkg = config/*.gbk

